--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 
-		<title> Real time multi-player games with HTML5</title>
+		<title>Run Around!</title>
 
 			<!-- Load style sheet -->
 		<link href="index.css" media="screen" rel="stylesheet" type="text/css">
